# GLowUp

./: .gitignore  CMakeLists.txt  README.md
1. Create Window/: CreateWindow.cpp  CreateWindow.md  build.sh
2. Draw Triangle/: DrawTriangle.cpp  DrawTriangle.md  build.sh
3. Transformation/: Transformation.cpp  Transformation.md  build.sh  fragmentShader.glsl  vertexShader.glsl
4. Coordinate Systems/: CoordinateSystems.cpp  build.sh
5. Camera/: Camera.cpp  build.sh  vertexShader.glsl
assets/shaders/: basicFragmentShader.frag  basicVertexShader.vert
src/: 1.CreateWindow.cpp  2.WindowClearColor.cpp  3.DrawTriangle.cpp  4.IndexBuffers.cpp  5.UniformShader.cpp  6.ShaderInterpolation.cpp  7.Texture.cpp
src/shaders/: Shader.cpp  Shader.h
src/textures/: Texture.cpp  Texture.h
